@@ -222,6 +222,11 @@
             <include>Defs_Hidden_Button</include>
             <visible>Control.IsEnabled(9)</visible>
         </control>
+        <control type="button" id ="10">
+            <label>$LOCALIZE[39024]</label>
+            <include>Defs_Hidden_Button</include>
+            <visible>Control.IsEnabled(10)</visible>
+        </control>
         <control type="button" id ="12">
             <include>Defs_Hidden_Button</include>
             <visible>Control.IsEnabled(12)</visible>
