@@ -1,3 +1,6 @@
+[B]0.9.36[/B]
+Add Dependencies button to AddonInfo
+
 [B]0.9.35[/B]
 Work on Kodi Games section begins
 Add MyGames.xml
